@@ -22,10 +22,7 @@
 #include "dchroot-dsa-main.h"
 #include "dchroot-dsa-options.h"
 
-#include <cstdlib>
-#include <iostream>
-
-#include <boost/format.hpp>
+#include <schroot/schroot-base-run.h>
 
 using std::endl;
 using boost::format;
@@ -44,28 +41,6 @@ int
 main (int   argc,
       char *argv[])
 {
-  try
-    {
-      // Set up locale.
-      std::locale::global(std::locale(""));
-      std::cout.imbue(std::locale());
-      std::cerr.imbue(std::locale());
-
-      bindtextdomain (GETTEXT_PACKAGE, LOCALEDIR);
-      textdomain (GETTEXT_PACKAGE);
-
-      dchroot_dsa::options::ptr opts(new dchroot_dsa::options);
-      dchroot_dsa::main kit(opts);
-      exit (kit.run(argc, argv));
-    }
-  catch (std::exception const& e)
-    {
-      sbuild::log_exception_error(e);
-      exit(EXIT_FAILURE);
-    }
-  catch (...)
-    {
-      sbuild::log_error() << _("An unknown exception occurred") << endl;
-      exit(EXIT_FAILURE);
-    }
+  return schroot_base::run
+    <dchroot_dsa::options, dchroot_dsa::main>(argc, argv);
 }
